--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5472",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7"
+    "eslint-config-next": "13.4.7",
+    "typescript": "5.1.6"
   }
 }
