--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "sass": "^1.64.1",
     "typescript": "5.1.6"
   }
 }
